log/build_2024-09-20_13-21-50/webots_ros2_homework1_python/stderr.log
  File "/home/ryan/Desktop/CS560/HW1/f24_robotics/install/webots_ros2_homework1_python/lib/python3.10/site-packages/webots_ros2_homework1_python/webots_ros2_homework1_python.py", line 109
    elif(right_lider_min / 2 <=):
                               ^
SyntaxError: invalid syntax

